[package]
name = "imgui-wgpu"
version = "0.6.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>", "Steven Wittens <steven@acko.net>"]
edition = "2018"
description = "A wgpu render backend for imgui-rs."
documentation = "https://docs.rs/imgui-wgpu/"
homepage = "https://github.com/Yatekii/imgui-wgpu-rs"
repository = "https://github.com/Yatekii/imgui-wgpu-rs"
readme = "README.md"
categories = ["gui", "graphics", "rendering", "rendering::graphics-api"]
keywords = ["gui", "graphics", "wgpu", "imgui"]
license = "MIT OR Apache-2.0"

[features]
default = []

[dependencies]
wgpu = { git = "https://github.com/StarArawn/wgpu-rs", rev="0a012c30780946532f9b2d711e98f7b75e184b5d" }
glsl-to-spirv = { version = "0.1", optional = true }
log = "0.4"
imgui = { version = "0.4.0-pre", git = "https://github.com/jaynus/imgui-rs", rev="fd3caf3e5b1141e8af3725f8c6898524c14426b0" }

[dev-dependencies]
winit = "0.22"
raw-window-handle = "0.3"
env_logger = "0.5"
image = "0.22"
futures = "0.3"

[dev-dependencies.imgui-winit-support]
version = "0.4.0-pre"
git = "https://github.com/jaynus/imgui-rs"
rev = "fd3caf3e5b1141e8af3725f8c6898524c14426b0"
default-features = true

[package.metadata.docs.rs]
all-features = true

# [patch.crates-io]
# wgpu = { version = "0.4", git = "https://github.com/gfx-rs/wgpu-rs.git", rev = "7b15e24" }
