[package]
name = "imgui-wgpu"
version = "0.6.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>", "Steven Wittens <steven@acko.net>"]
edition = "2018"
description = "A wgpu render backend for imgui-rs."
documentation = "https://docs.rs/imgui-wgpu/"
homepage = "https://github.com/Yatekii/imgui-wgpu-rs"
repository = "https://github.com/Yatekii/imgui-wgpu-rs"
readme = "README.md"
categories = ["gui", "graphics", "rendering", "rendering::graphics-api"]
keywords = ["gui", "graphics", "wgpu", "imgui"]
license = "MIT OR Apache-2.0"

[features]
default = []

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", rev="87da83cb4f107560e113f3a7d31fcd323653cd2e" }
glsl-to-spirv = { version = "0.1", optional = true }
log = "0.4"
imgui = { version = "0.4.0-pre", git = "https://github.com/jaynus/imgui-rs", rev="fd3caf3e5b1141e8af3725f8c6898524c14426b0" }

[dev-dependencies]
winit = "0.22"
raw-window-handle = "0.3"
env_logger = "0.5"
image = "0.22"
futures = "0.3"

[dev-dependencies.imgui-winit-support]
version = "0.4.0-pre"
git = "https://github.com/jaynus/imgui-rs"
rev = "fd3caf3e5b1141e8af3725f8c6898524c14426b0"
default-features = true

[dev-dependencies.wgt]
package = "wgpu-types"
git = "https://github.com/gfx-rs/wgpu"
rev = "43c67ac59c2dedaa4d78601bc460aab7c3257973"

[package.metadata.docs.rs]
all-features = true
